# listera-novelreader

./: .gitignore  CMakeLists.txt  README.en.md  README.md
resources/: listera-novelreader.desktop  listera-reader.desktop
src/: advancedoptions.cpp  application.cpp  application.h  bookbrowser.cpp  bookbrowser.h  bookcontents.cpp  bookcontents.h  bookmarks.cpp  bookmarks.h  dsettingsbuilder.cpp  dsettingsbuilder.h  jumpratio.cpp  jumpratio.h  listera-novelreader.pro  listera-reader.pro  main.cpp  mainwindow.cpp  mainwindow.h  readerconfig.cpp  readerconfig.h  readersettings.cpp  readersettings.h  readinghistory.h  resources.qrc  shotcutsettings.cpp  shotcutsettings.h  textcontent.cpp  textcontent.h  utils.cpp  utils.h
translations/: listera-novelreader_zh_CN.ts  listera-reader_zh_CN.qm  listera-reader_zh_CN.ts
代码/listera-reader/: advancedoptions.h  application.cpp  application.h  bookcontents.cpp  bookcontents.h  listera-reader.pro  listera-reader_zh_CN.ts  main.cpp  mainwindow.cpp  mainwindow.h  readerconfig.cpp  readerconfig.h  readinghistory.cpp  textcontent.h
参考/Txtreader/: Makefile  txtreader
参考/rs97-txtReader/: Makefile  main.cpp  qtxtreader.ini
